--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,35 @@ const pages = [
     href: "/about",
     label: "About",
   },
+  {
+    href: "/resume",
+    label: "Resume",
+  },
+  {
+    href: "/blog",
+    label: "Blog",
+  },
 ];
 ---
 
-{pages.map((p) => <a href={p.href}>{p.label}</a>)}
+<div class="navbar bg-base-100">
+  <div class="avatar">
+    <!-- <div class="w-4 rounded">
+      <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+    </div> -->
+  </div>
+  <div class="flex-1">
+    <a href="/" class="btn btn-ghost normal-case text-xl">Tanzim Mokammel</a>
+  </div>
+  <div class="flex-none">
+    <ul class="menu menu-horizontal px-1">
+      {
+        pages.map((p) => (
+          <li>
+            <a href={p.href}>{p.label}</a>
+          </li>
+        ))
+      }
+    </ul>
+  </div>
+</div>
