--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-  <main>Hello World</main>
+<Layout title="About me">
+  <h1>Under construction</h1>
 </Layout>
