--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,5 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="About me">
-  <main>
-    <h1>Thanks for dropping by</h1>
-  </main>
+  <h1>Under construction</h1>
 </Layout>
