--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="About me">
+<Layout title="Blog">
   <h1>Under construction</h1>
 </Layout>
