--- a/src/components/CodingWrapped.astro
+++ b/src/components/CodingWrapped.astro
@@ -1,8 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import CodingWrapped from "../components/CodingWrapped.astro";
+import Coding from "../components/Coding.jsx";
 
-// TODO: add into secrets
 const baseURL = import.meta.env.GUAC_URL;
 const login = async () => {
   const username = import.meta.env.GUAC_USER;
@@ -18,7 +16,6 @@ const login = async () => {
   if (res?.status !== 200) {
     console.error(res);
     return;
-    // throw new Error("Failed to authenticate guac user");
   }
   const { token } = await res.json();
   return { Authorization: `Bearer ${token}` };
@@ -38,30 +35,13 @@ const fetchGuac = async (start: string, end: string) => {
   const data = await res.json();
   return data?.languageStats;
 };
-const months = 3;
+const months =  Number.parseInt(import.meta.env.GUAC_MONTHS, 10);
+console.log({ months });
 const today = new Date().toISOString().split("T")[0];
 let before = new Date();
 before.setMonth(before.getMonth() - months);
 const beforeStr = before.toISOString().split("T")[0];
 const languageData = await fetchGuac(beforeStr, today);
-
-// const guacAuthHeader = await login();
-// console.log(guacAuthHeader);
 ---
 
-<Layout title="Welcome">
-  <div class="hero bg-base py-12">
-    <div class="hero-content flex-col lg:flex-row">
-      <img src="/tanzim.jpg" class="max-w-lg rounded-lg shadow-2xl" />
-      <div class="divider lg:divider-horizontal"></div>
-      <div>
-        <h1 class="text-5xl font-bold">Hi, I'm Tanzim!</h1>
-        <p class="py-6">
-          I'm a curious and passionate software engineer. This page is a
-          demonstration of my work and play.
-        </p>
-      </div>
-    </div>
-    <CodingWrapped />
-  </div>
-</Layout>
+<Coding months={months} client:visible data={languageData?.percentages} />
