--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -9,6 +9,10 @@ const pages = [
     label: "About",
   },
   {
+    href: "/stats",
+    label: "Stats",
+  },
+  {
     href: "/resume",
     label: "Resume",
   },
