currently working section

--- a/src/components/CodingWrapped.astro
+++ b/src/components/CodingWrapped.astro
@@ -53,6 +53,14 @@ const fetchWithMonths = async (months: number) => {
       months: 3,
       data: await fetchWithMonths(3),
     },
+    {
+      months: 6,
+      data: await fetchWithMonths(6),
+    },
+    {
+      months: 12,
+      data: await fetchWithMonths(12),
+    },
   ]}
   topN={7}
 />
