--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -19,6 +19,7 @@ const { title } = Astro.props;
   <body>
     <Navigation />
     <div class="container mx-auto px-16 py-16">
+      <button class="btn gap-2 my-4"> PDF</button>
       <article class="prose">
         <slot />
       </article>
