--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,12 +5,8 @@ const pages = [
     label: "Home",
   },
   {
-    href: "/about",
-    label: "About",
-  },
-  {
-    href: "/stats",
-    label: "Stats",
+    href: "/work",
+    label: "Work",
   },
   {
     href: "/resume",
