--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -136,7 +136,7 @@ const tiles: Tile[] = [
     ))
   }
   <div class="mb-4">
-    <h1 class="text-4xl font-bold my-12">My top programming languages used</h1>
+    <h1 class="text-4xl font-bold my-12">I've been reading and writing in</h1>
     <CodingWrapped />
   </div>
 </Layout>
