--- a/src/pages/play.astro
+++ b/src/pages/play.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Blog">
+<Layout title="Play">
   <div class="alert alert-warning shadow-lg">
     <div>
       <svg
