--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -1,10 +1,9 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
 export interface Props {
   title: string;
 }
-
-const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -12,17 +11,18 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>Resume</title>
   </head>
   <body>
     <Navigation />
     <div class="container mx-auto px-16 py-16">
-      <button class="btn gap-2 my-4"> PDF</button>
+      <!-- <button class="btn gap-2 my-4"> PDF</button> -->
       <article class="prose">
         <slot />
       </article>
     </div>
+    <Footer />
   </body>
 </html>
