fix image links

--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -88,7 +88,7 @@ const tiles: Tile[] = [
     company: "",
     title: "Strong visualizer",
     desc: "Track how swole you're getting",
-    imageSrc: "muscle.png",
+    imageSrc: "/muscle.png",
     link: "https://vis-strong-go-ghfzoy3ovq-ue.a.run.app/",
     type: "side",
   },
@@ -96,7 +96,7 @@ const tiles: Tile[] = [
     company: "",
     title: "Spotify listening habits",
     desc: "See what you've been listening to",
-    imageSrc: "spotify-side.png",
+    imageSrc: "/spotify-side.png",
     link: "https://spotify-personal-ybmvkz22xq-uc.a.run.app",
     type: "side",
   },
@@ -104,7 +104,7 @@ const tiles: Tile[] = [
     company: "",
     title: "Podcast",
     desc: "Listen to my podcast discussing self studying software engineering, staying productive during long term travel, and the tech startup scene in Berli",
-    imageSrc: "podcast.png",
+    imageSrc: "/podcast.png",
     link: "https://open.spotify.com/episode/5u3gXFNGomUkKimQHE9sgG?si=Op9ZjqG-RcuyWr9Uek2TvA",
     type: "misc",
   },
