--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -103,7 +103,7 @@ const tiles: Tile[] = [
   {
     company: "",
     title: "Podcast",
-    desc: "Listen to my podcast discussing self studying software engineering, staying productive during long term travel, and the tech startup scene in Berli",
+    desc: "Listen to my podcast discussing self studying software engineering, staying productive during long term travel, and the tech startup scene in Berlin",
     imageSrc: "/podcast.png",
     link: "https://open.spotify.com/episode/5u3gXFNGomUkKimQHE9sgG?si=Op9ZjqG-RcuyWr9Uek2TvA",
     type: "misc",
