--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -79,7 +79,7 @@ const tiles: Tile[] = [
   {
     company: "",
     title: "Side projects",
-    desc: "As if I wasn't busy enough",
+    desc: "Apply yourself, Jesse!",
     link: "https://github.com/users/mtanzim/projects/5",
     imageSrc: "/side.png",
     type: "study",
