--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@
     <a href="https://www.linkedin.com/in/tanzim-mokammel/" target="_blank"
       >LinkedIn</a
     >
-    <a href="mailto:mtanzim@gmail.com">Email</a>
+    <a href="mailto:mtanzim@gmail.com">mtanzim@gmail.com</a>
   </div>
   <div class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
     <button id="goTop">Back to top</button>
@@ -17,7 +17,7 @@
 
 <script>
   const button = document.querySelector("#goTop");
-  button.addEventListener("click", () =>
+  button?.addEventListener("click", () =>
     window.scrollTo({ top: 0, behavior: "smooth" })
   );
 </script>
