--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,10 +5,13 @@
   class="footer items-center p-4 bg-neutral text-neutral-content fixed bottom-0"
 >
   <div class="items-center grid-flow-col">
-    <a href="https://www.linkedin.com/in/tanzim-mokammel/" target="_blank"
-      >LinkedIn</a
+    <a class="mx-2" href="mailto:mtanzim@gmail.com">mtanzim@gmail.com</a>
+    <a
+      class="mx-2"
+      href="https://www.linkedin.com/in/tanzim-mokammel/"
+      target="_blank">LinkedIn</a
     >
-    <a href="mailto:mtanzim@gmail.com">mtanzim@gmail.com</a>
+    <a class="mx-2" href="https://github.com/mtanzim" target="_blank">Github</a>
   </div>
   <div class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
     <button id="goTop">Back to top</button>
