--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,9 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Home">
-  <div class="hero bg-base py-12">
+  <div class="hero g-base py-12">
     <div class="hero-content flex-col lg:flex-row">
-      <img src="/tanzim.jpg" class="max-w-lg rounded-lg shadow-2xl" />
+      <img src="/tanzim.jpg" class="max-w-sm rounded-lg shadow-2xl" />
       <div class="divider lg:divider-horizontal"></div>
       <div>
         <h1 class="text-5xl font-bold">Hi, I'm Tanzim!</h1>
