--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -7,7 +7,7 @@ export interface Props {
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="dracula" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
