--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -86,18 +86,18 @@ const tiles: Tile[] = [
   },
   {
     company: "",
-    title: "Strong visualizer",
-    desc: "Track how swole you're getting",
-    imageSrc: "/muscle.png",
-    link: "https://vis-strong-go-ghfzoy3ovq-ue.a.run.app/",
-    type: "side",
-  },
-  {
-    company: "",
     title: "Spotify listening habits",
     desc: "See what you've been listening to",
     imageSrc: "/spotify-side.png",
     link: "https://spotify-personal-ybmvkz22xq-uc.a.run.app",
+    type: "side",
+  },
+  {
+    company: "",
+    title: "Strong visualizer",
+    desc: "Visualize progress from Strong app csvs",
+    imageSrc: "/muscle.png",
+    link: "https://vis-strong-go-ghfzoy3ovq-ue.a.run.app/",
     type: "side",
   },
   {
