--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -56,7 +56,7 @@ const tiles: Tile[] = [
     company: "Relotalent",
     title: "Contract developer",
     desc: "Developed an expat compensation and tax calculation engine",
-    link: "https://www.diginex.com/",
+    link: "https://www.relotalent.com/salary-calculator",
     imageSrc: "/relotalent.png",
     type: "past",
   },
