--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -17,8 +17,7 @@ export interface Props {
   </head>
   <body>
     <Navigation />
-    <div class="container mx-auto px-16 py-16">
-      <!-- <button class="btn gap-2 my-4"> PDF</button> -->
+    <div class="container mx-auto px-4">
       <article class="prose">
         <slot />
       </article>
