--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -112,18 +112,18 @@ const tiles: Tile[] = [
 ---
 
 <Layout title="Work">
-  {
-    Object.keys(tileHeaders).map((tileType) => (
-      <>
-        <h1 class="text-4xl font-bold my-12">
-          {tileHeaders[tileType as TileType]}
-        </h1>
-        <div class="flex mb-4">
-          {tiles
-            .filter((t) => t.type === tileType)
-            .map((tile) => (
-              <div class="card w-64 bg-base-400 shadow-xl m-4">
-                <a target="_blank" href={tile.link}>
+  <div class="flex mb-4 flex-wrap">
+    {
+      Object.keys(tileHeaders).map((tileType) => (
+        <div class="flex flex-col p-2">
+          <h1 class="text-2xl font-bold my-12">
+            {tileHeaders[tileType as TileType]}
+          </h1>
+          <div class="flex mb-4 flex-wrap">
+            {tiles
+              .filter((t) => t.type === tileType)
+              .map((tile) => (
+                <div class="card m-4 flex-initial w-64 bg-base-400 shadow-xl m-4">
                   <figure>
                     <img
                       class="object-cover h-36 w-36"
@@ -131,25 +131,32 @@ const tiles: Tile[] = [
                       alt={tile.company}
                     />
                   </figure>
-                  <div>
-                    <div class="card-body">
-                      <h2 class="card-title">{tile.title}</h2>
-                      <p>{tile.desc}</p>
+                  <div class="card-body">
+                    <h2 class="card-title">{tile.title}</h2>
+                    <p>{tile.desc}</p>
+                    <div class="card-actions justify-end">
+                      <a target="_blank" href={tile.link}>
+                        <div class="badge badge-secondary badge-lg">
+                          Visit
+                        </div>
+                      </a>
                     </div>
                   </div>
-                </a>
-              </div>
-            ))}
+                </div>
+              ))}
+          </div>
         </div>
-      </>
-    ))
-  }
-  <div class="mb-4">
-    <h1 class="text-4xl font-bold my-12">
-      I've recently been reading and writing in
-    </h1>
-    <div class="artboard artboard-horizontal phone-1">
-      <CodingWrapped />
+      ))
+    }
+  </div>
+  <div class="flex flex-col p-4">
+    <div class="mb-4">
+      <h1 class="text-2xl font-bold my-12">
+        I've recently been reading and writing in
+      </h1>
+      <div class="w-96 py-16 bg-base-400 m-4">
+        <CodingWrapped />
+      </div>
     </div>
   </div>
 </Layout>
