--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -23,7 +23,7 @@ const pages = [
 ];
 ---
 
-<div class="navbar bg-base-100">
+<div class="flex flex-wrap navbar bg-base-100 mb-8">
   <div class="flex-1">
     <a href="/" class="btn btn-ghost normal-case text-xl">Tanzim Mokammel</a>
   </div>
