--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -17,7 +17,7 @@ export interface Props {
   </head>
   <body>
     <Navigation />
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto pt-12 pb-24">
       <article class="prose">
         <slot />
       </article>
