started about me

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,6 +5,10 @@ const pages = [
     label: "Home",
   },
   {
+    href: "/about",
+    label: "About",
+  },
+  {
     href: "/work",
     label: "Work",
   },
@@ -15,10 +19,6 @@ const pages = [
   {
     href: "/blog",
     label: "Blog",
-  },
-  {
-    href: "/play",
-    label: "Play",
   },
 ];
 ---
