--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -18,7 +18,7 @@ export interface Props {
   <body>
     <Navigation />
     <div class="container mx-auto pt-12 pb-24">
-      <article class="prose">
+      <article class="prose prose-sm">
         <slot />
       </article>
     </div>
