--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -9,6 +9,10 @@ const pages = [
     label: "Work",
   },
   {
+    href: "/play",
+    label: "Play",
+  },
+  {
     href: "/blog",
     label: "Blog",
   },
