update image links

--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -26,7 +26,7 @@ const tiles: Tile[] = [
     title: "Senior Software Engineer",
     desc: "Helping North Americans shop smarter",
     link: "https://flipp.com/home/",
-    imageSrc: "/flipp.png",
+    imageSrc: "/work/flipp.png",
     type: "current",
   },
   {
@@ -34,7 +34,7 @@ const tiles: Tile[] = [
     title: "Web development mentor",
     desc: "Mentoring the next generation of web developers",
     link: "https://careerfoundry.com/",
-    imageSrc: "/cf.jpg",
+    imageSrc: "/work/cf.jpg",
     type: "current",
   },
   {
@@ -42,7 +42,7 @@ const tiles: Tile[] = [
     title: "Software development engineer",
     desc: "Developed an investment platform for private equity",
     link: "https://moonfare.com/",
-    imageSrc: "/moonfare.jpeg",
+    imageSrc: "/work/moonfare.jpeg",
     type: "past",
   },
   {
@@ -50,7 +50,7 @@ const tiles: Tile[] = [
     title: "Full stack developer",
     desc: "Developed a cryptocurrency data aggregation and trading platform",
     link: "https://www.diginex.com/",
-    imageSrc: "/diginex.png",
+    imageSrc: "/work/diginex.png",
     type: "past",
   },
   {
@@ -58,7 +58,7 @@ const tiles: Tile[] = [
     title: "Contract developer",
     desc: "Developed an expat compensation and tax calculation engine",
     link: "https://www.relotalent.com/salary-calculator",
-    imageSrc: "/relotalent.png",
+    imageSrc: "/work/relotalent.png",
     type: "past",
   },
   {
@@ -66,7 +66,7 @@ const tiles: Tile[] = [
     title: "Books",
     desc: "My reading list of software engineering and adjacent books",
     link: "https://github.com/users/mtanzim/projects/9",
-    imageSrc: "/books.png",
+    imageSrc: "/work/books.png",
     type: "study",
   },
   {
@@ -74,7 +74,7 @@ const tiles: Tile[] = [
     title: "Courses",
     desc: "My list of online courses past and present",
     link: "https://github.com/users/mtanzim/projects/4",
-    imageSrc: "/courses.png",
+    imageSrc: "/work/courses.png",
     type: "study",
   },
   {
@@ -82,14 +82,14 @@ const tiles: Tile[] = [
     title: "Side projects",
     desc: "Apply yourself, Jesse!",
     link: "https://github.com/users/mtanzim/projects/5",
-    imageSrc: "/side.png",
+    imageSrc: "/work/side.png",
     type: "study",
   },
   {
     company: "",
     title: "Spotify listening habits",
     desc: "See what you've been listening to",
-    imageSrc: "/spotify-side.png",
+    imageSrc: "/work/spotify-side.png",
     link: "https://spotify-personal-ybmvkz22xq-uc.a.run.app",
     type: "side",
   },
@@ -97,7 +97,7 @@ const tiles: Tile[] = [
     company: "",
     title: "Strong visualizer",
     desc: "Visualize progress from Strong app csvs",
-    imageSrc: "/muscle.png",
+    imageSrc: "/work/muscle.png",
     link: "https://vis-strong-go-ghfzoy3ovq-ue.a.run.app/",
     type: "side",
   },
@@ -105,7 +105,7 @@ const tiles: Tile[] = [
     company: "",
     title: "My story",
     desc: "Learn more about my story",
-    imageSrc: "/tanzim.jpg",
+    imageSrc: "tanzim.jpg",
     link: "/work/story",
     type: "misc",
     internal: true,
@@ -114,7 +114,7 @@ const tiles: Tile[] = [
     company: "",
     title: "My resume",
     desc: "Get my detailed work history",
-    imageSrc: "/about/berlin/3.jpg",
+    imageSrc: "/work/story/berlin/3.jpg",
     link: "/work/resume",
     type: "misc",
     internal: true,
@@ -123,7 +123,7 @@ const tiles: Tile[] = [
     company: "",
     title: "Podcast",
     desc: "Listen to my podcast discussing self studying software engineering, staying productive during long term travel, and the tech startup scene in Berlin",
-    imageSrc: "/podcast.png",
+    imageSrc: "/work/podcast.png",
     link: "https://open.spotify.com/episode/5u3gXFNGomUkKimQHE9sgG?si=Op9ZjqG-RcuyWr9Uek2TvA",
     type: "misc",
   },
