--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -38,7 +38,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
   <div class="flex mb-4 flex-wrap my-6">
     <PhotoCard
       title="Freecodecamp meetup Hanoi"
-      imgSrc="/about/hanoi/1.jpg"
+      imgSrc="/work/story/hanoi/1.jpg"
       imageAlt="fcc hanoi"
     >
       <p>
@@ -49,7 +49,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
     </PhotoCard>
     <PhotoCard
       title='Remote "Work" from Pai'
-      imgSrc="/about/hanoi/2.jpg"
+      imgSrc="/work/story/hanoi/2.jpg"
       imageAlt="hanoi"
     >
       <p>
@@ -59,7 +59,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
     </PhotoCard>
     <PhotoCard
       title="Dinner with the Relotalent team and friends"
-      imgSrc="/about/hanoi/3.jpg"
+      imgSrc="/work/story/hanoi/3.jpg"
       imageAlt="hanoi dinner"
     >
       <p>
@@ -94,14 +94,14 @@ import PhotoCard from "../../components/PhotoCard.astro";
     <div class="flex mb-4 flex-wrap">
       <PhotoCard
         title="Brandenburg Tor at night"
-        imgSrc="/about/berlin/1.jpg"
+        imgSrc="/work/story/berlin/1.jpg"
         imageAlt="brandenburg tor"
       >
         <p>The weird and fantastic city of Berlin</p>
       </PhotoCard>
       <PhotoCard
         title="My first office space in Mindspace, Berlin"
-        imgSrc="/about/berlin/2.jpg"
+        imgSrc="/work/story/berlin/2.jpg"
         imageAlt="profile pic"
       >
         <p>
@@ -111,7 +111,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
       </PhotoCard>
       <PhotoCard
         title="Portfolio shoot with Moonfare"
-        imgSrc="/about/berlin/3.jpg"
+        imgSrc="/work/story/berlin/3.jpg"
         imageAlt="profile pic"
       >
         <p>
